--- a/controller_rocky/templates/shibboleth2.xml.erb
+++ b/controller_rocky/templates/shibboleth2.xml.erb
@@ -28,11 +28,14 @@
             <MetadataProvider type="XML"
                               uri="https://shibidpdev.cca.unipd.it/idp/shibboleth"
                               backingFilePath="/var/cache/shibboleth/idp.unipd.it-testing-metadata.xml"/>
-<% end -%>
+<% else -%>
             <MetadataProvider type="XML"
-                              uri="https://www.garr.it/idem-metadata/idem-metadata-sha256.xml"
-                              backingFilePath="/var/cache/shibboleth/idem-metadata.xml"
-                              reloadInterval="7200"/>
+                              uri="https://idp.infn.it/saml2/idp/metadata.php"
+                              backingFilePath="/var/cache/shibboleth/idp.infn.it-metadata.xml"/>
+            <MetadataProvider type="XML"
+                              uri="https://shibidp.cca.unipd.it/idp/shibboleth"
+                              backingFilePath="/var/cache/shibboleth/idp.unipd.it-metadata.xml"/>
+<% end -%>
         </MetadataProvider>
         
         <AttributeExtractor type="XML" 
@@ -43,40 +46,67 @@
         <AttributeFilter type="XML" validate="true" path="attribute-policy.xml"/>
 
         <CredentialResolver type="File">
-            <Key><Path>/etc/shibboleth/sp-key.pem</Path></Key>
+            <Key><Path>/etc/shibboleth/horizon-infn-key.pem</Path></Key>
             <Certificate>
-                <Path>/etc/shibboleth/sp-cert.pem</Path>
+                <Path>/etc/shibboleth/horizon-infn-cert.pem</Path>
                 <Path>/etc/pki/ca-trust/extracted/pem/tls-ca-bundle.pem</Path>
             </Certificate>
         </CredentialResolver>
+
+
+
+        <ApplicationOverride id="infn_ssoapp" entityID="https://<%=@keystone_cap_fqdn-%>/v3">
+
+            <Errors redirectErrors="https://<%=@cv_site_fqdn-%>/dashboard/auth/auth_error/"/>
+
+            <CredentialResolver type="File">
+                <Key><Path>/etc/shibboleth/keystone-infn-key.pem</Path></Key>
+                <Certificate>
+                    <Path>/etc/shibboleth/keystone-infn-cert.pem</Path>
+                    <Path>/etc/pki/ca-trust/extracted/pem/tls-ca-bundle.pem</Path>
+                </Certificate>
+            </CredentialResolver>
+
+        </ApplicationOverride>
+
+
+
+
+
+
+
 
         <ApplicationOverride id="unipd_app" entityID="https://<%=@cv_site_fqdn-%>/dashboard-shib">
 
             <Errors redirectErrors="https://<%=@cv_site_fqdn-%>/dashboard/auth/auth_error/"/>
 
             <CredentialResolver type="File">
-                <Key><Path>/etc/shibboleth/sp-unipd-key.pem</Path></Key>
+                <Key><Path>/etc/shibboleth/horizon-unipd-key.pem</Path></Key>
                 <Certificate>
-                    <Path>/etc/shibboleth/sp-unipd-cert.pem</Path>
+                    <Path>/etc/shibboleth/horizon-unipd-cert.pem</Path>
                     <Path>/etc/pki/ca-trust/extracted/pem/tls-ca-bundle.pem</Path>
                 </Certificate>
             </CredentialResolver>
 
         </ApplicationOverride>
 
-        <ApplicationOverride id="unipd_ssoapp" entityID="https://<%=@cv_site_fqdn-%>:5000/v3">
+        <ApplicationOverride id="unipd_ssoapp" entityID="https://<%=@keystone_cv_fqdn-%>/v3">
 
             <Errors redirectErrors="https://<%=@cv_site_fqdn-%>/dashboard/auth/auth_error/"/>
 
             <CredentialResolver type="File">
-                <Key><Path>/etc/shibboleth/sp-unipd-key.pem</Path></Key>
+                <Key><Path>/etc/shibboleth/keystone-unipd-key.pem</Path></Key>
                 <Certificate>
-                    <Path>/etc/shibboleth/sp-unipd-cert.pem</Path>
+                    <Path>/etc/shibboleth/keystone-unipd-cert.pem</Path>
                     <Path>/etc/pki/ca-trust/extracted/pem/tls-ca-bundle.pem</Path>
                 </Certificate>
             </CredentialResolver>
 
         </ApplicationOverride>
+
+
+
+
 
     </ApplicationDefaults>
     
