--- a/controller_rocky/templates/aai_settings.py.erb
+++ b/controller_rocky/templates/aai_settings.py.erb
@@ -28,7 +28,7 @@ MANAGERS = (
 
 HORIZON_CONFIG['help_url'] = '<%=@help_url-%>'
 
-HORIZON_CONFIG['identity_providers']['infn_sso']['region'] = 'https://<%=@skeystone_cap_fqdn-%>/v3'
+HORIZON_CONFIG['identity_providers']['infn_sso']['region'] = 'https://<%=@keystone_cap_fqdn-%>/v3'
 HORIZON_CONFIG['identity_providers']['unipd_sso']['region'] = 'https://<%=@keystone_cv_fqdn-%>/v3'
 
 HORIZON_CONFIG['identity_providers']['infn_sso']['path'] = 'https://<%=@site_fqdn-%>/dashboard-infn/auth/register/'
