--- a/controller_rocky/templates/local_settings.erb
+++ b/controller_rocky/templates/local_settings.erb
@@ -159,8 +159,8 @@ EMAIL_SUBJECT_PREFIX = '[CloudVeneto] '
 #    ('http://cluster2.example.com:5000/v2.0', 'cluster2'),
 #]
 
-OPENSTACK_HOST = "<%=@site_fqdn-%>" 
-OPENSTACK_KEYSTONE_URL = "https://%s:5000/v3" % OPENSTACK_HOST
+OPENSTACK_HOST = "<%=@keystone_cap_fqdn-%>" 
+OPENSTACK_KEYSTONE_URL = "https://%s/v3" % OPENSTACK_HOST
 OPENSTACK_KEYSTONE_DEFAULT_ROLE = "Member"
 
 # Enables keystone web single-sign-on if set to True.
