Fixed notification template

--- a/controller_rocky/templates/notifications_en.txt.erb
+++ b/controller_rocky/templates/notifications_en.txt.erb
@@ -201,7 +201,7 @@ body: The affiliation for {{ username }} to {{ project }} is expired.
 [user_purged]
 LOG: User {{ username }} removed by {{ log.user_name }}
 subject: Account for user {{ username }} has been removed
-body: The account {{ username }} has been removed from Cloud Area Padovana.
+body: The account {{ username }} has been removed from  Cloud Veneto.
   
   Please, don't reply to this message
 
