--- a/controller_rocky/templates/aai_settings.py.erb
+++ b/controller_rocky/templates/aai_settings.py.erb
@@ -34,3 +34,130 @@ HORIZON_CONFIG['identity_providers']['unipd_sso']['region'] = 'https://<%=@keyst
 HORIZON_CONFIG['identity_providers']['infn_sso']['path'] = 'https://<%=@site_fqdn-%>/dashboard-infn/auth/register/'
 HORIZON_CONFIG['identity_providers']['unipd_sso']['path'] = 'https://<%=@cv_site_fqdn-%>/dashboard-unipd/auth/register/'
 
+<% if @::controller_rocky::cloud_role == "is_production" -%>
+
+UNIT_TABLE = {
+  'INFN' : {
+    "name" : 'INFN',
+    "organization" : 'infn.it',
+    "quota_total" :  200,
+    "quota_ceph" : 200,
+    "quota_iscsi-infnpd" : 0,
+    "quota_equallogic-unipd" : 0,
+    "quota_per_volume" : 5000,
+
+    "aggregate_prefix" : "INFN",
+    "hypervisors" : [
+      "cld-np-01.cloud.pd.infn.it", "cld-np-02.cloud.pd.infn.it", "cld-np-03.cloud.pd.infn.it",
+      "cld-np-04.cloud.pd.infn.it", "cld-np-05.cloud.pd.infn.it", "cld-np-06.cloud.pd.infn.it",
+      "cld-np-07.cloud.pd.infn.it", "cld-np-08.cloud.pd.infn.it", "cld-np-10.cloud.pd.infn.it",
+      "cld-np-11.cloud.pd.infn.it", "cld-np-12.cloud.pd.infn.it", "cld-np-13.cloud.pd.infn.it",
+      "cld-np-14.cloud.pd.infn.it", "cld-np-15.cloud.pd.infn.it", "cld-np-16.cloud.pd.infn.it",
+      "cld-np-17.cloud.pd.infn.it", "cld-np-18.cloud.pd.infn.it", "cld-nl-01.cloud.pd.infn.it",
+      "cld-nl-02.cloud.pd.infn.it", "cld-nl-03.cloud.pd.infn.it", "cld-nl-04.cloud.pd.infn.it",
+      "cld-nl-05.cloud.pd.infn.it", "cld-nl-06.cloud.pd.infn.it", "cld-nl-07.cloud.pd.infn.it",
+      "cld-nl-08.cloud.pd.infn.it", "cld-nl-09.cloud.pd.infn.it", "cld-nl-10.cloud.pd.infn.it",
+      "cld-nl-11.cloud.pd.infn.it", "cld-nl-12.cloud.pd.infn.it", "cld-nl-13.cloud.pd.infn.it",
+      "cld-nl-14.cloud.pd.infn.it", "cld-nl-15.cloud.pd.infn.it", "cld-nl-16.cloud.pd.infn.it"
+    ],
+    "metadata" : { "size" : "normal" },
+
+    "lan_net_pool" : "10.64",
+    "lan_router" : "router-lan",
+    "nameservers" : [ "192.84.143.16", "192.84.143.224", "192.84.143.31" ]
+  },
+  'UNIPD' : {
+    "name" : u'Università di Padova',
+    "organization" : 'unipd.it',
+    "quota_total" :  200,
+    "quota_ceph" : 0,
+    "quota_iscsi-infnpd" : 0,
+    "quota_equallogic-unipd" : 200,
+    "quota_per_volume" : 5000,
+
+    "aggregate_prefix" : "Unipd",
+    "hypervisors" : [
+      "cld-blu-01.cloud.pd.infn.it", "cld-blu-02.cloud.pd.infn.it", "cld-blu-05.cloud.pd.infn.it",
+      "cld-blu-06.cloud.pd.infn.it", "cld-blu-07.cloud.pd.infn.it", "cld-blu-11.cloud.pd.infn.it",
+      "cld-blu-12.cloud.pd.infn.it", "cld-blu-13.cloud.pd.infn.it", "cld-blu-14.cloud.pd.infn.it",
+      "cld-blu-15.cloud.pd.infn.it", "cld-blu-16.cloud.pd.infn.it"
+    ],
+    "metadata" : { "size" : "normal" },
+
+    "lan_net_pool" : "10.67",
+    "lan_router" : "Unipd",
+    "nameservers" : [ "147.162.1.2", "8.8.8.8", "8.8.4.4" ]
+  },
+    'UNIPD-DFA' : {
+    "name" : u'Università di Padova - DFA',
+    "organization" : 'unipd.it',
+    "quota_total" :  200,
+    "quota_ceph" : 0,
+    "quota_iscsi-infnpd" : 0,
+    "quota_equallogic-unipd" : 200,
+    "quota_per_volume" : 5000,
+
+    "aggregate_prefix" : "Unipd",
+    "hypervisors" : [
+      "cld-blu-01.cloud.pd.infn.it", "cld-blu-02.cloud.pd.infn.it", "cld-blu-05.cloud.pd.infn.it",
+      "cld-blu-06.cloud.pd.infn.it", "cld-blu-07.cloud.pd.infn.it", "cld-blu-11.cloud.pd.infn.it",
+      "cld-blu-12.cloud.pd.infn.it", "cld-blu-13.cloud.pd.infn.it", "cld-blu-14.cloud.pd.infn.it",
+      "cld-blu-15.cloud.pd.infn.it", "cld-blu-16.cloud.pd.infn.it"
+    ],
+    "metadata" : { "size" : "normal" },
+
+    "lan_net_pool" : "10.64",
+    "lan_router" : "router-lan",
+    "nameservers" : [ "192.84.143.16", "192.84.143.224", "192.84.143.31" ]
+  },
+  'CLOUDVENETO' : {
+    "name" : 'Cloud Veneto',
+    "organization" : 'cloudveneto.it',
+    "quota_total" :  200,
+    "quota_ceph" : 0,
+    "quota_iscsi-infnpd" : 0,
+    "quota_equallogic-unipd" : 200,
+    "quota_per_volume" : 5000,
+
+    "aggregate_prefix" : "Unipd",
+    "hypervisors" : [
+      "cld-blu-01.cloud.pd.infn.it", "cld-blu-02.cloud.pd.infn.it", "cld-blu-05.cloud.pd.infn.it",
+      "cld-blu-06.cloud.pd.infn.it", "cld-blu-07.cloud.pd.infn.it", "cld-blu-11.cloud.pd.infn.it",
+      "cld-blu-12.cloud.pd.infn.it", "cld-blu-13.cloud.pd.infn.it", "cld-blu-14.cloud.pd.infn.it",
+      "cld-blu-15.cloud.pd.infn.it", "cld-blu-16.cloud.pd.infn.it"
+    ],
+    "metadata" : { "size" : "normal" },
+
+    "lan_net_pool" : "10.68",
+    "lan_router" : "CloudVeneto",
+    "nameservers" : [ "147.162.1.2", "8.8.8.8", "8.8.4.4" ]
+  }
+}
+<% else -%>
+
+UNIT_TABLE = {
+  'INFN' : {
+    "name" : 'INFN',
+    "organization" : 'infn.it',
+    "quota_total" :  200,
+    "quota_ceph" : 200,
+    "quota_iscsi-infnpd" : 0,
+    "quota_equallogic-unipd" : 0,
+    "quota_per_volume" : 5000,
+
+    "aggregate_prefix" : "INFN",
+    "hypervisors" : [
+      "compute-01.cloud.pd.infn.it",
+      "compute-02.cloud.pd.infn.it",
+      "compute-03.cloud.pd.infn.it"
+    ],
+    "metadata" : { "size" : "normal" },
+
+    "lan_net_pool" : "10.66",
+    "lan_router" : "Lan",
+    "nameservers" : [ "192.84.143.16", "192.84.143.224", "192.84.143.31" ]
+  }
+}
+
+<% end -%>
+
