--- a/controller_rocky/templates/aai_settings.py.erb
+++ b/controller_rocky/templates/aai_settings.py.erb
@@ -34,7 +34,7 @@ HORIZON_CONFIG['identity_providers']['unipd_sso']['region'] = 'https://<%=@keyst
 HORIZON_CONFIG['identity_providers']['infn_sso']['path'] = 'https://<%=@site_fqdn-%>/dashboard-infn/auth/register/'
 HORIZON_CONFIG['identity_providers']['unipd_sso']['path'] = 'https://<%=@cv_site_fqdn-%>/dashboard-unipd/auth/register/'
 
-<% if @::controller_rocky::cloud_role == "is_production" -%>
+<% unless @shib_testing_md -%>
 
 UNIT_TABLE = {
   'INFN' : {
