--- a/controller_rocky/templates/ssl.conf.erb
+++ b/controller_rocky/templates/ssl.conf.erb
@@ -126,6 +126,14 @@ SSLCipherSuite          "ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA3
         ShibRequestSetting entityID <%=@infnaai_ent_id%>
     </Location>
 
+    <Location /dashboard-unipd>
+        AuthType           shibboleth
+        require            shib-session
+        ShibRequestSetting requireSession 1
+        ShibRequestSetting applicationId default
+        ShibRequestSetting entityID <%=@unipdaai_ent_id%>
+    </Location>
+
     <Location /Shibboleth.sso>
         AuthType None
         Require all granted
@@ -244,6 +252,14 @@ SSLCipherSuite          "ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA3
 <% if @enable_aai_ext and @enable_shib -%>
 
     WSGIScriptAlias /dashboard-unipd "/usr/share/openstack-dashboard/openstack_dashboard/wsgi/django.wsgi"
+
+    <Location /dashboard-infn>
+        AuthType           shibboleth
+        require            shib-session
+        ShibRequestSetting requireSession 1
+        ShibRequestSetting applicationId unipd_app
+        ShibRequestSetting entityID <%=@infnaai_ent_id%>
+    </Location>
 
     <Location /dashboard-unipd>
         AuthType           shibboleth
