New structure for organization table

--- a/controller_rocky/templates/aai_settings.py.erb
+++ b/controller_rocky/templates/aai_settings.py.erb
@@ -209,41 +209,29 @@ HORIZON_CONFIG['course_for'] = {
 
 
 unipd_dpt_list = [
-    ('dfa.unipd.it', 'Physics and Astronomy Dept.'),
-    ('bio.unipd.it', 'Biology Dept.'),
-    ('dgs.unipd.it', 'Geoscience Dept.'),
-    ('dei.unipd.it', 'Information Engineering Dept.'),
-    ('icea.unipd.it', 'Civil and Environmental Engineering Dept.'),
-    ('math.unipd.it', 'Mathematics Dept.'),
-    ('dimm.unipd.it', 'Molecular Medicine Dept.'),
-    ('dsb.unipd.it', 'Biomedical Sciences Dept.'),
-    ('disc.unipd.it', 'Chemical Sciences Dept.'),
-    ('dsf.unipd.it', 'Pharmaceutical Sciences Dept.'),
-    ('other.unipd.it', 'Other Depts.')
+    ('dfa.unipd.it', 'Physics and Astronomy Dept.', "Alberto Garfagnini", "alberto.garfagnini@unipd.it", "0498277322"),
+    ('bio.unipd.it', 'Biology Dept.', "Giorgio Valle", "giorgio.valle@unipd.it", "0498276281"),
+    ('dgs.unipd.it', 'Geoscience Dept.', "Manuele Faccenda", "manuele.faccenda@unipd.it", "0498279159"),
+    ('dei.unipd.it', 'Information Engineering Dept.', "Barbara Di Camillo", "barbara.dicamillo@unipd.it", "0498277671"),
+    ('icea.unipd.it', 'Civil and Environmental Engineering Dept.', "Lorenzo Sanavia", "lorenzo.sanavia@unipd.it", "0498275599"),
+    ('math.unipd.it', 'Mathematics Dept.', "Alessandro Sperduti", "alessandro.sperduti@unipd.it", "0498271355"),
+    ('dimm.unipd.it', 'Molecular Medicine Dept.', "Stefano Toppo", "stefano.toppo@unipd.it", "0498276958"),
+    ('dsb.unipd.it', 'Biomedical Sciences Dept.', "Silvio Tosatto", "silvio.tosatto@unipd.it", "0498276269"),
+    ('disc.unipd.it', 'Chemical Sciences Dept.', "Antonino Polimeno", "antonino.polimeno@unipd.it", "0498275146"),
+    ('dsf.unipd.it', 'Pharmaceutical Sciences Dept.', "Stefano Moro", "stefano.moro@unipd.it", "0498275704"),
+    ('other.unipd.it', 'Other Depts.', None, None, None)
 ]
 
 HORIZON_CONFIG['organization'] = {
     "infn.it" : [
-        ("pd.infn.it", "INFN Padova site"),
-        ("lnl.infn.it", "INFN Legnaro Labs"),
-        ("other.infn.it", "INFN other sites")
+        ("pd.infn.it", "INFN Padova site", None, None, None),
+        ("lnl.infn.it", "INFN Legnaro Labs", None, None, None),
+        ("other.infn.it", "INFN other sites", None, None, None)
     ],
     "unipd.it" : unipd_dpt_list,
     "studenti.unipd.it" : unipd_dpt_list
 }
 
-HORIZON_CONFIG['org_contacts'] = {
-    'dfa.unipd.it' : ("Alberto Garfagnini", "alberto.garfagnini@unipd.it", "0498277322"),
-    'bio.unipd.it' : ("Giorgio Valle", "giorgio.valle@unipd.it", "0498276281"),
-    'dgs.unipd.it' : ("Manuele Faccenda", "manuele.faccenda@unipd.it", "0498279159"),
-    'dei.unipd.it' : ("Barbara Di Camillo", "barbara.dicamillo@unipd.it", "0498277671"),
-    'icea.unipd.it' : ("Lorenzo Sanavia", "lorenzo.sanavia@unipd.it", "0498275599"),
-    'math.unipd.it' : ("Alessandro Sperduti", "alessandro.sperduti@unipd.it", "0498271355"),
-    'dimm.unipd.it' : ("Stefano Toppo", "stefano.toppo@unipd.it", "0498276958"),
-    'dsb.unipd.it' : ("Silvio Tosatto", "silvio.tosatto@unipd.it", "0498276269"),
-    'disc.unipd.it' : ("Antonino Polimeno", "antonino.polimeno@unipd.it", "0498275146"),
-    'dsf.unipd.it' : ("Stefano Moro", "stefano.moro@unipd.it", "0498275704")
-}
 
 
 
