--- a/controller_rocky/templates/notifications_en.txt.erb
+++ b/controller_rocky/templates/notifications_en.txt.erb
@@ -181,7 +181,7 @@ LOG: User {{ username }} requires renewal
 subject: User {{ username }} requires renewal
 body: The affiliation of {{ username }} to {{ project }} is going to expire.
   Please, renew the affiliation or the user will be removed from the project
-  More information at: https://cloud-areapd.pd.infn.it/Users_Guide/html-desktop/#ManageAccountRenewal
+  More information at: https://cloudveneto-userguide.readthedocs.io/en/latest/Registration.html#manage-account-renewals-only-for-project-managers
   
   Please, don't reply to this message
 
