New URL for user guide

--- a/controller_rocky/templates/aai_settings.py.erb
+++ b/controller_rocky/templates/aai_settings.py.erb
@@ -26,7 +26,7 @@ MANAGERS = (
 <% end -%>
 )
 
-HORIZON_CONFIG['help_url'] = 'https://cloudveneto-userguide.readthedocs.io/en/latest/index.html'
+HORIZON_CONFIG['help_url'] = 'http://userguide.cloudveneto.it/'
 
 HORIZON_CONFIG['srv_bind_table'] = {
   "<%=@site_fqdn-%>" : "<%=@keystone_cap_fqdn-%>",
