--- a/controller_rocky/templates/ssl.conf.erb
+++ b/controller_rocky/templates/ssl.conf.erb
@@ -86,7 +86,7 @@ SSLCipherSuite          "ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA3
     UseCanonicalName On
     TraceEnable      Off
     RedirectMatch    permanent  ^/$ /dashboard
-    RedirectMatch    permanent  ^/Users_Guide/(.+)  https://cloudveneto-userguide.readthedocs.io/en/latest
+    RedirectMatch    permanent  ^/Users_Guide/(.+)  http://userguide.cloudveneto.it/
 
     ErrorLog         logs/ssl_error_log_infn
     TransferLog      logs/ssl_access_log_infn
@@ -222,7 +222,7 @@ SSLCipherSuite          "ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA3
     UseCanonicalName On
     TraceEnable      Off
     RedirectMatch    permanent  ^/$ /dashboard
-    RedirectMatch    permanent  ^/Users_Guide/(.+)  https://cloudveneto-userguide.readthedocs.io/en/latest
+    RedirectMatch    permanent  ^/Users_Guide/(.+)  http://userguide.cloudveneto.it/
 
     ErrorLog         logs/ssl_error_log_unipd
     TransferLog      logs/ssl_access_log_unipd
