--- a/controller_rocky/templates/notifications_en.txt.erb
+++ b/controller_rocky/templates/notifications_en.txt.erb
@@ -68,7 +68,7 @@ body: The cloud admin has created the project {{ project }}
 LOG: User {{ username }} requests access to project {{ project }}
 subject: New request for membership
 body: The user {{ username }} requires to access the project {{ project }}
-  For further details refer to https://cloudveneto-userguide.readthedocs.io/en/latest/Registration.html#manage-project-membership-requests-only-for-project-managers
+  For further details refer to http://userguide.cloudveneto.it/en/latest/Registration.html#manage-project-membership-requests-only-for-project-managers
   
   Please, don't reply to this message
 
@@ -149,7 +149,7 @@ body: You have the following pending subscriptions for project {{ project }}:
   {% for req in pendingreqs %}
   * {{ req }}
   {% endfor %} 
-  For further details refer to https://cloudveneto-userguide.readthedocs.io/en/latest/Registration.html#manage-project-membership-requests-only-for-project-managers
+  For further details refer to http://userguide.cloudveneto.it/en/latest/Registration.html#manage-project-membership-requests-only-for-project-managers
   
   Please, don't reply to this message
 
@@ -158,7 +158,7 @@ LOG: User {{ username }} requests to join project {{ project }}
 subject: Subscription request waiting for approval
 body: User {{ username }} requires access to project {{ project }}
   Please, validate the subscription request
-  For further details refer to https://cloudveneto-userguide.readthedocs.io/en/latest/Registration.html#manage-project-membership-requests-only-for-project-managers
+  For further details refer to http://userguide.cloudveneto.it/en/latest/Registration.html#manage-project-membership-requests-only-for-project-managers
   
   Please, don't reply to this message
 
@@ -181,7 +181,7 @@ LOG: User {{ username }} requires renewal
 subject: User {{ username }} requires renewal
 body: The affiliation of {{ username }} to {{ project }} is going to expire.
   Please, renew the affiliation or the user will be removed from the project
-  More information at: https://cloudveneto-userguide.readthedocs.io/en/latest/Registration.html#manage-account-renewals-only-for-project-managers
+  More information at: http://userguide.cloudveneto.it/en/latest/Registration.html#manage-account-renewals-only-for-project-managers
   
   Please, don't reply to this message
 
